<resources>
    <string name="app_name">SQlite_Applicarion</string>

    <string name="id">id</string>
    <string name="name">name</string>
    <string name="Design">Design</string>
    <string name="position">position</string>

     <string name="insert">insert</string>

    <string name="read">read</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>
